<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/student_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textName"
            android:layout_alignRight="@+id/textName"
            android:layout_below="@+id/textName"
            android:ems="10"
            android:hint="@string/student_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editName"
            android:layout_alignRight="@+id/editName"
            android:layout_below="@+id/editName"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/student_family"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editName"
            android:layout_alignRight="@+id/editName"
            android:layout_below="@+id/textFamily"
            android:ems="10"
            android:hint="@string/student_family"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editFamily"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/student_email"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editFamily"
            android:layout_alignRight="@+id/editFamily"
            android:layout_below="@+id/textEmail"
            android:ems="10"
            android:hint="@string/student_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editEmail"
            android:layout_alignRight="@+id/editEmail"
            android:layout_below="@+id/editEmail"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/student_phone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textPhone"
            android:ems="10"
            android:hint="@string/student_phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textTeachingBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editPhone"
            android:layout_alignRight="@+id/editPhone"
            android:layout_below="@+id/editPhone"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/teaching_background"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTeachingBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textTeachingBackground"
            android:ems="3"
            android:hint="@string/teaching_background_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textEducationState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editTeachingBackground"
            android:layout_alignRight="@+id/editTeachingBackground"
            android:layout_below="@+id/editTeachingBackground"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/education_state"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinnerEducationState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textEducationState"
            android:layout_alignRight="@+id/textEducationState"
            android:layout_below="@+id/textEducationState"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinnerEducationState"
            android:layout_alignRight="@+id/spinnerEducationState"
            android:layout_below="@+id/spinnerEducationState"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/university"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinnerUniversity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textUniversity"
            android:layout_alignRight="@+id/textUniversity"
            android:layout_below="@+id/textUniversity"
            android:layout_marginTop="15dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/textTeacherRequestCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinnerUniversity"
            android:layout_alignRight="@+id/spinnerUniversity"
            android:layout_below="@+id/spinnerUniversity"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/teacher_course_request"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTeacherRequestCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textTeacherRequestCourse"
            android:ems="30"
            android:hint="@string/teaching_request_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/textMoreExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/editTeacherRequestCourse"
            android:layout_alignRight="@+id/editTeacherRequestCourse"
            android:layout_below="@+id/editTeacherRequestCourse"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/more_explanation"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editMoreExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textMoreExplanation"
            android:ems="100"
            android:hint="@string/more_explanation_hint"
            android:inputType="text" />

        <ImageView
            android:id="@+id/imViewOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/editMoreExplanation"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:src="@drawable/send" />

    </RelativeLayout>

</ScrollView>