<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imViewInstructorLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="29dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/textInstructorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imViewInstructorLogo"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:hint="@string/instructor_name"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textInstructorHonor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textInstructorName"
                android:layout_alignRight="@+id/textInstructorName"
                android:layout_below="@+id/imViewInstructorLogo"
                android:layout_marginTop="26dp"
                android:hint="@string/instructor_honor"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textInstructorTeachingBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textInstructorName"
                android:layout_alignRight="@+id/textInstructorName"
                android:layout_below="@+id/textInstructorHonor"
                android:layout_marginTop="59dp"
                android:hint="@string/instructor_teaching_background"
                android:padding="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>